update page title and index page html style

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,8 @@
 <!--index.wxml-->
 <view class="container">
-  <navigator url="/pages/customTabBar/customTabBar" hover-class="navigator-hover">
-    <view>自定义tabbar</view>
-  </navigator>
-  <navigator url="/pages/customNavCell/customNavCell" hover-class="navigator-hover">
-    <view>自定义navCell</view>
-  </navigator>
+  <block wx:for="{{dataList}}">
+    <navigator url="{{item.nav}}" hover-class="navigator-hover">
+      <view>{{item.name}}</view>
+    </navigator>
+  </block>
 </view>
